[package]
name = "chunked_store"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bytes = "1.6"
futures-util = "0.3"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
